--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>es.upm.fi.dia.oeg.mappingpedia</groupId>
-	<artifactId>mappingpedia-engine-dataset</artifactId>
+	<groupId>es.upm.fi.dia.oeg.mappingpedia.engine</groupId>
+	<artifactId>datasets</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
@@ -22,6 +22,11 @@
     </properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>es.upm.fi.dia.oeg.mappingpedia</groupId>
+			<artifactId>mappingpedia-commons</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 
 		<!-- <dependency> <groupId>com.hp.hpl.jena</groupId> <artifactId>jena</artifactId> 
 			<version>2.6.4</version> </dependency> <dependency> <groupId>com.hp.hpl.jena</groupId> 
